src/objects/inscor__Printer__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Printers</relationshipLabel>
        <relationshipName>Printers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__PrintNode_ID__c</fullName>
        <label>PrintNode ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Printer_Type__c</fullName>
        <label>Printer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Printer</label>
    <listViews>
        <fullName>Printers_SAS</fullName>
        <columns>NAME</columns>
        <columns>inscor__PrintNode_ID__c</columns>
        <columns>inscor__Printer_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>Printers</label>
    </listViews>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__PrintNode_ID__c</columns>
        <columns>inscor__Printer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>